Fixed column alignment.

--- a/modules/JavaFXApplication/src/main/resources/it/tidalwave/accounting/ui/impl/javafx/Application.css
+++ b/modules/JavaFXApplication/src/main/resources/it/tidalwave/accounting/ui/impl/javafx/Application.css
@@ -4,9 +4,23 @@
 
   }
 
-.table-tree-view .column-header,
+.table-tree-view .table-column .column-header,
 .table-view .column-header 
   {
     -fx-font-size: 10px;
     /* TODO: bold */
   }
+  
+.table-tree-view,
+.table-view
+  {
+    -fx-font-size: 10px;
+    /* TODO: bold */
+  }
+  
+.right-aligned-column /* .table-cell */
+  { 
+    -fx-alignment: center-right; 
+    /*-fx-font-size: 20px;*/
+  }
+  
